# kimi-demo

./: .gitignore  CMakeLists.txt  README.md  path.ps1
src/ast/: ast.cpp
src/ast/include/: ast.h  visitor.h
src/bygen/: bygem_declaration.cpp  bygen.cpp  bygen_declaration.cpp  bygen_expression.cpp  bygen_helpers.cpp  bygen_macros.cpp
src/bygen/include/: bygen.h  bygen_declaration.h  bygen_expression.h  bygen_macros.h  bygen_statement.h
src/bygen/instructions/: bygen_instructions.cpp
src/bygen/instructions/include/: bygen_instructions.h
src/bytecode_instructions/: instructions.cpp  instructions_arithmetic.cpp  instructions_lloc.cpp  instructions_macros.cpp
src/bytecode_instructions/include/: instructions.h  instructions_arithmetic.h  instructions_lloc.h  instructions_macros.h
src/cli/: cli.cpp
src/general/include/: sizes.h  value.h
src/kimiIR/: ir_gen.cpp  ir_gen_declaration.cpp  ir_gen_expression.cpp  ir_gen_statement.cpp
src/kimiIR/include/: ir_gen.h  ir_gen_declaration.h  ir_gen_expression.h
src/kimiIR/instructions/: ir_instructions.cpp
src/kimiIR/instructions/include/: ir_instructions.h
src/lexer/: lexer.cpp  lexer_tokens.cpp
src/lexer/include/: lexer.h  lexer_tokens.h
src/orion/: add_handlers.h++  orion_vm.cpp  preprocess_functions.cpp  print_handlers.h++
src/orion/binaryOp/: add_handlers.h++  bit_and_handlers.h++  bit_or_handlers.h++  bit_sl_handlers.h++  bit_sr_handlers.h++  bit_xor_handlers.h++  div_handlers.h++  equal_handlers.h++  ge_handlers.h++  greater_handlers.h++  le_handlers.h++  less_handlers.h++  mod_handlers.h++  mul_handlers.h++  ne_handlers.h++  sub_handlers.h++
src/orion/include/: heap.h++  mod_handlers.h++  orion_vm.h
src/orion/logical/: and_handlers.h++  or_handlers.h++
src/orion/unary/: bit_not_handlers.h++  neg_handlers.h++  not_handlers.h++
src/parser/: parse_declaration.cpp  parser.cpp  parser_expression.cpp  parser_statement.cpp
src/parser/include/: parse_declaration.h  parser.h  parser_expression.h  parser_macro.h  parser_statement.h
src/pipeline/: pipeline.cpp
src/pipeline/include/: pipeline.h++
src/primitives/include/: string_header.h++
src/reader/: reader.cpp
src/reader/include/: reader.h++
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/rust/src/vm/: heap_manager.rs  mod.rs  op_add.rs  op_binary.rs  op_cast.rs  op_const.rs  op_function.rs  op_incremental.rs  op_index_access.rs  op_jmp_if.rs  op_load.rs  op_memory.rs  op_native_helpers.rs  op_println.rs  op_scope_points.rs  op_store.rs  op_unary.rs  preprocessor.rs  register_functions.rs  vm.rs  vm_utils.rs
src/shinVM/: decoder.cpp  shin_VM.cpp  stack_manager.cpp
src/shinVM/executor/: executor.cpp
src/shinVM/executor/include/: executor.h
src/shinVM/include/: decoder.h  shin_VM.h  stack_manager.h
src/validator/semantic/: semantic_analyzer.cpp
src/validator/semantic/include/: semantic_analyzer.h
src/validator/type_infer/: type_analyzer.cpp
src/validator/type_infer/include/: type_analyzer.h
src/vm/: vm.cpp
src/vm/include/: vm.h
tests/: CMakeLists.txt
tests/bygen/: test_by.cpp  test_bygen_expression.cpp
tests/kimiIR/: test_ir.cpp
tests/lexer/: test_lexer.cpp
tests/parser/: test_parser.cpp  test_parser_declaration.cpp  test_parser_expression.cpp
tests/pipeline/: test_integration.cpp
tests/playground/: playground.cpp
tests/type_infer/: test_type_infer.cpp
tests/vm/: test_orion.cpp  test_vm.cpp
